--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   --box-shadow: 2px 2px 10px;
   --color: #118bee;
   --color-accent: #118bee0b;
+  --color-link: #AA5A70;
   --color-bg: #fff;
   --color-bg-secondary: #e9e9e9;
   --color-secondary: #3c3c3c;
