--- a/style/global.css
+++ b/style/global.css
@@ -600,6 +600,11 @@ video {
   margin-bottom: 4rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -616,6 +621,10 @@ video {
   margin-top: 4rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mb-8 {
   margin-bottom: 2rem;
 }
@@ -626,10 +635,6 @@ video {
 
 .\!mt-4 {
   margin-top: 1rem !important;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .flex {
@@ -676,16 +681,8 @@ video {
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
-}
-
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -703,16 +700,12 @@ video {
   padding-right: 1rem;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
 .pt-16 {
   padding-top: 4rem;
 }
 
-.pt-32 {
-  padding-top: 8rem;
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .text-center {
@@ -2361,16 +2354,12 @@ video {
     margin-top: 8rem;
   }
 
-  .md\:mt-8 {
-    margin-top: 2rem;
+  .md\:mt-4 {
+    margin-top: 1rem;
   }
 
   .md\:mb-16 {
     margin-bottom: 4rem;
-  }
-
-  .md\:mt-4 {
-    margin-top: 1rem;
   }
 
   .md\:flex-row {
